--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.13",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
